TimelinePanel: fix for white horizontal bar in records view after initial show.
parent of recordsView had x-scrollbar and affected the size of child views.

Drive by fix: disable y-scrollbar of Memory counters sidebar view.

BUG=326121
R=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/143323002

git-svn-id: svn://svn.chromium.org/blink/trunk@165403 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/timelinePanel.css
+++ b/front_end/timelinePanel.css
@@ -93,6 +93,10 @@
     overflow-x: hidden;
 }
 
+.timeline-records-view {
+    overflow: hidden !important;
+}
+
 .timeline-details-split {
     flex: auto;
 }
@@ -502,6 +506,7 @@
 
 #memory-graphs-container .split-view-contents-first {
     background-color: rgb(236, 236, 236);
+    overflow-y: hidden;
 }
 
 #memory-graphs-container .sidebar-tree-section {
